feat: custom exception 추가 (#10)
* feat: GitHub Actions CI/CD

* feat: custom exception 추가

* docs: PLAN.md 추가 (#8)

* feat/#11 (#12)

* feat/유저 생성시 전화번호 요구

* refactor/phone 컬럼 수정

* feat/업데이트때 전화번호도 수정 가능하도록 변경

* fix: custom exception 더 상세하게

* feat: user 조회 시 phone, intro 반환, user 수정 intro 추가

* fix: 구글 oauth 로그인 시 이미지 url 길이 초과문제 해결

* fix: 유저 조회 시 role도 반환

* feat: user name search 추가

---------
