# src/main/java/com/example/user/dto/response/UserSearchResponse.java
@@ -1,5 +1,6 @@
 package com.example.user.dto.response;
 
+import com.example.user.entity.Role;
 import com.example.user.entity.User;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
@@ -13,6 +14,12 @@ public record UserSearchResponse(
 
         String name,
 
+        String phone,
+
+        String intro,
+
+        Role role,
+
         @JsonProperty("created_at")
         LocalDateTime createdAt
 ) {
@@ -21,6 +28,9 @@ public record UserSearchResponse(
                 user.getImageUrl(),
                 user.getEmail(),
                 user.getName(),
+                user.getPhone(),
+                user.getIntro(),
+                user.getRole(),
                 user.getCreatedAt()
         );
     }
