# src/main/java/com/example/user/entity/User.java
@@ -1,5 +1,6 @@
 package com.example.user.entity;
 
+import com.example.user.global.exception.DeletedUserException;
 import jakarta.persistence.*;
 import lombok.*;
 import org.hibernate.annotations.CreationTimestamp;
@@ -26,7 +27,7 @@ public class User {
     @Column(nullable = false)
     private String name;
 
-    @Column(name = "image_url")
+    @Column(name = "image_url", length = 2048)
     private String imageUrl;
 
     @Enumerated(EnumType.STRING)
@@ -35,6 +36,8 @@ public class User {
 
     @Column(unique = true)
     private String phone;
+
+    private String intro;
 
     @Column(name = "auth_provider")
     private String authProvider;
@@ -81,18 +84,20 @@ public class User {
                 .build();
     }
 
-    public void update(String name, String imageUrl, String phone) {
+
+    public void update(String name, String imageUrl, String phone, String intro) {
         if (this.deletedAt != null) {
-            throw new IllegalStateException("삭제된 유저");
+            throw new DeletedUserException("삭제된 유저");
         }
         if (name != null) this.name = name;
         if (imageUrl != null) this.imageUrl = imageUrl;
         if (phone != null) this.phone = phone;
+        if (intro != null) this.intro = intro;
     }
 
     public void delete() {
         if (this.deletedAt != null) {
-            throw new IllegalStateException("삭제된 유저");
+            throw new DeletedUserException("삭제된 유저");
         }
         this.deletedAt = LocalDateTime.now();
     }
